# ci-mirrors

./: Cargo.toml  README.md
.github/workflows/: ci.yml
files/: demo.toml  gha-self-hosted.toml  libc.toml  stdarch.toml
files/rustc/: android.toml  cloudabi-apt-archive.toml  freebsd.toml  gcc.toml  gnu.toml  llvm-mingw.toml  llvm.toml  mingw.toml  misc.toml  netbsd.toml  ninja.toml  sccache.toml  solaris.toml
src/: downloader.rs  main.rs  manifest.rs  storage.rs  utils.rs
