[package]
name = "ci-mirrors"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.97"
aws-config = { version = "1.6.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.82.0"
clap = { version = "4.5.35", default-features = false, features = ["std", "derive", "help"] }
futures = "0.3.31"
reqwest = { version = "0.12.15", features = ["stream"] }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.8"
tempfile = "3.19.1"
tokio = { version = "1.44.1", features = ["fs", "macros", "rt", "rt-multi-thread"] }
tokio-util = { version = "0.7.14", features = ["io"] }
toml = "0.8.20"
